--- a/.dvc/config
+++ b/.dvc/config
@@ -5,3 +5,4 @@
     url = gdrive://1bxRbOXRah2lb_E8Ec6X6yDO9vYUj5OFT
     gdrive_client_id = 25021044702-g9nrb5d0gbo0dv8r9hokphh26jnk5hn0.apps.googleusercontent.com
     gdrive_client_secret = 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
+    gdrive_use_service_account = true
