Pyling can fail

--- a/.github/workflows/test_and_lint.yml
+++ b/.github/workflows/test_and_lint.yml
@@ -59,5 +59,4 @@ jobs:
 
     - name: Run pylint
       run: |
-        pylint src/ tests/ --exit-zero
-        echo "Pylint completed (warnings do not fail the build)"
+        pylint src/ tests/ 
