--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - setup-release-workflow
   workflow_dispatch:
 
+env:
+  GDRIVE_FOLDER_NAME: Model-releases
+
 jobs:
   release-model:
     runs-on: ubuntu-latest
@@ -49,5 +52,6 @@ jobs:
 
       - name: Upload both model files to versioned Google Drive folder
         run: |
-          rclone copy output/c1_BoW_Sentiment_Model.pkl gdrive_drive:${{ vars.GDRIVE_FOLDER_ID }}/${{ github.ref_name }}/
-          rclone copy output/c2_Classifier_Sentiment_Model.pkl gdrive_drive:${{ vars.GDRIVE_FOLDER_ID }}/${{ github.ref_name }}/
+          rclone mkdir 'gdrive_drive:${{ env.GDRIVE_FOLDER_NAME }}/${{ github.ref_name }}/' --drive-shared-with-me
+          rclone copy output/c1_BoW_Sentiment_Model.pkl 'gdrive_drive:${{ env.GDRIVE_FOLDER_NAME }}/${{ github.ref_name }}/' --drive-shared-with-me
+          rclone copy output/c2_Classifier_Sentiment_Model.pkl 'gdrive_drive:${{ env.GDRIVE_FOLDER_NAME }}/${{ github.ref_name }}/' --drive-shared-with-me
