--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Release Model
 
 on:
   push:
+    # tags: ["v[0-9]+.[0-9]+.[0-9]+"]
     branches:
       - setup-release-workflow
   workflow_dispatch:
@@ -40,6 +41,9 @@ jobs:
 
       - name: Reproduce pipeline
         run: dvc repro
+
+      - name: Push DVC data to remote
+        run: dvc push -v
 
       - name: Install rclone
         run: |
