--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,7 @@ name: Release Model
 
 on:
   push:
-    # tags: ["v[0-9]+.[0-9]+.[0-9]+"]
-    branches:
-      - setup-release-workflow
+    tags: ["v[0-9]+.[0-9]+.[0-9]+"]
 
 env:
   GDRIVE_FOLDER_NAME: Model-releases
@@ -58,6 +56,7 @@ jobs:
           rclone mkdir 'gdrive_drive:${{ env.GDRIVE_FOLDER_NAME }}/${{ github.ref_name }}/' --drive-shared-with-me
           rclone copy output/c1_BoW_Sentiment_Model.pkl 'gdrive_drive:${{ env.GDRIVE_FOLDER_NAME }}/${{ github.ref_name }}/' --drive-shared-with-me
           rclone copy output/c2_Classifier_Sentiment_Model.pkl 'gdrive_drive:${{ env.GDRIVE_FOLDER_NAME }}/${{ github.ref_name }}/' --drive-shared-with-me
+
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
@@ -67,7 +66,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REMLA_GITHUB_TOKEN }}
 
       - name: Upload model artifact 1 to release
         uses: actions/upload-release-asset@v1
@@ -77,7 +76,7 @@ jobs:
           asset_name: c1_BoW_Sentiment_Model.pkl
           asset_content_type: application/octet-stream
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REMLA_GITHUB_TOKEN }}
 
       - name: Upload model artifact 2 to release
         uses: actions/upload-release-asset@v1
@@ -87,4 +86,4 @@ jobs:
           asset_name: c2_Classifier_Sentiment_Model.pkl
           asset_content_type: application/octet-stream
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REMLA_GITHUB_TOKEN }}
