--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -25,18 +25,29 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+
       - name: Write GDrive SA key
         run: |
           mkdir -p secrets
           echo '${{ secrets.GDRIVE_SA_KEY }}' > secrets/sa_key.json
+
       - name: Set env for DVC
         run: echo "DVC_GDRIVE_SERVICE_ACCOUNT_JSON_FILE_PATH=secrets/sa_key.json" >> $GITHUB_ENV
+
+      - name: Download NLTK data
+        run: |
+          python -c "import nltk; nltk.download('punkt'); nltk.download('wordnet')"
 
       - name: Pull data with DVC
         run: dvc pull -v
 
       - name: Reproduce pipeline
         run: dvc repro
+
+      - name: Run basic tests after training
+        run: |
+          pytest tests/test_data_integrity.py tests/test_model_development.py -v || true
 
       - name: Upload evaluation metrics
         uses: actions/upload-artifact@v4
