--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - test-in-workflow
   pull_request:
     branches:
       - test-in-workflow
@@ -61,61 +62,9 @@ jobs:
           dvc repro || echo "DVC repro failed, continuing with existing models"
         continue-on-error: true
 
-      - name: Run pylint and generate score
-        run: |
-          # Run pylint and capture the score
-          pylint src/ --reports=y 2>&1 | tee pylint_output.txt || true
-          
-          # Extract score from pylint output and save to test_reports
-          python -c "
-          import re
-          import json
-          from pathlib import Path
-          
-          try:
-              with open('pylint_output.txt', 'r') as f:
-                  content = f.read()
-              
-              # Look for the score pattern in pylint output
-              # Pattern like: 'Your code has been rated at 8.52/10'
-              score_match = re.search(r'Your code has been rated at ([\d\.-]+)/10', content)
-              if score_match:
-                  score = float(score_match.group(1))
-              else:
-                  # Fallback: try to find any score pattern
-                  score_match = re.search(r'[\d\.-]+/10', content)
-                  if score_match:
-                      score = float(score_match.group().split('/')[0])
-                  else:
-                      score = 8.5  # Default fallback
-              
-              # Save to test_reports directory
-              Path('test_reports').mkdir(exist_ok=True)
-              with open('test_reports/pylint_score.json', 'w') as f:
-                  json.dump({'score': score}, f)
-              
-              print(f'Pylint score extracted: {score}/10')
-              
-          except Exception as e:
-              print(f'Error extracting pylint score: {e}')
-              # Fallback score
-              Path('test_reports').mkdir(exist_ok=True)
-              with open('test_reports/pylint_score.json', 'w') as f:
-                  json.dump({'score': 8.5}, f)
-          "
-
       - name: Run pylint with human-readable output
         run: |
           pylint src/ --reports=y || true
-
-      - name: Run flake8
-        run: |
-          flake8 src/ --max-line-length=100 --ignore=E203,W503 || true
-
-      - name: Run bandit security check
-        run: |
-          bandit -r src/ -f json -o bandit_report.json || true
-          bandit -r src/ || true
 
       - name: Run tests with coverage
         run: |
@@ -126,77 +75,25 @@ jobs:
             --cov-report=html:coverage_reports/html \
             --cov-report=term \
             --junit-xml=test_reports/junit.xml \
-            -v || true
+            -v
 
       - name: Calculate ML Test Score
         run: |
-          python scripts/ml_test_score.py test_reports/junit.xml test_reports/ml_test_score.json || echo "ML Test Score calculation failed"
+          python scripts/ml_test_score.py test_reports/junit.xml test_reports/ml_test_score.json
 
-      - name: Generate test summary
-        run: |
-          python -c "
-          import json
-          import xml.etree.ElementTree as ET
-          from pathlib import Path
-          
-          # Load test results
-          try:
-              tree = ET.parse('test_reports/junit.xml')
-              root = tree.getroot()
-              
-              total_tests = int(root.get('tests', 0))
-              failures = int(root.get('failures', 0))
-              errors = int(root.get('errors', 0))
-              skipped = int(root.get('skipped', 0))
-              passed = total_tests - failures - errors
-              
-              print(f'Test Results: {passed}/{total_tests} passed, {failures} failed, {errors} errors, {skipped} skipped')
-          except:
-              print('Could not parse test results')
-          
-          # Load coverage
-          try:
-              with open('test_reports/coverage.json', 'r') as f:
-                  coverage_data = json.load(f)
-                  coverage = coverage_data.get('totals', {}).get('percent_covered', 0)
-                  print(f'Test Coverage: {coverage:.1f}%')
-          except:
-              print('Could not load coverage data')
-          
-          # Load ML Test Score
-          try:
-              with open('test_reports/ml_test_score.json', 'r') as f:
-                  ml_data = json.load(f)
-                  ml_score = ml_data.get('overall_score', 0)
-                  meta_score = ml_data.get('metamorphic_score', 0)
-                  print(f'ML Test Score: {ml_score:.1f}/100')
-                  print(f'Metamorphic Testing Score: {meta_score:.1f}/100')
-          except:
-              print('Could not load ML Test Score')
-          
-          # Load Pylint Score
-          try:
-              with open('test_reports/pylint_score.json', 'r') as f:
-                  pylint_data = json.load(f)
-                  pylint_score = pylint_data.get('score', 0)
-                  print(f'Pylint Score: {pylint_score:.2f}/10')
-          except:
-              print('Could not load Pylint score')
-          "
 
       - name: Update README with badges
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           python scripts/update_readme.py README.md
 
-      - name: Commit README updates
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      - name: Commit test reports and README updates
+        if: github.event_name == 'push'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add README.md
-          git diff --staged --quiet || git commit -m "Update README with automated quality metrics [skip ci]"
-          git push origin main || echo "No changes to commit"
+          git add README.md test_reports/ coverage_reports/ coverage.xml
+          git diff --staged --quiet || git commit -m "Update README and test reports with automated quality metrics [skip ci]"
+          git push origin ${{ github.ref_name }} || echo "No changes to commit"
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
@@ -207,11 +104,6 @@ jobs:
             test_reports/
             coverage_reports/
             coverage.xml
-            coverage.json
-            pylint_output.txt
-            pylint_score.json
-            bandit_report.json
-            ml_test_score.json
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
@@ -220,106 +112,6 @@ jobs:
           name: coverage-reports
           path: |
             coverage.xml
-            coverage.json
+            test_reports/coverage.json
             coverage_reports/
 
-      - name: Comment PR with results
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs');
-            
-            let comment = '## 🔍 Quality Check Results\n\n';
-            
-            // Read test results from XML
-            try {
-              const xmlContent = fs.readFileSync('test_reports/junit.xml', 'utf8');
-              const parser = require('xml2js');
-              parser.parseString(xmlContent, (err, result) => {
-                if (!err && result.testsuite) {
-                  const tests = parseInt(result.testsuite.$.tests || 0);
-                  const failures = parseInt(result.testsuite.$.failures || 0);
-                  const errors = parseInt(result.testsuite.$.errors || 0);
-                  const passed = tests - failures - errors;
-                  const icon = passed === tests ? '✅' : '❌';
-                  comment += `### 🧪 Test Results\n${icon} ${passed}/${tests} tests passed\n\n`;
-                }
-              });
-            } catch (e) {
-              comment += '### 🧪 Test Results\n❓ Could not read test results\n\n';
-            }
-            
-            # Read coverage
-            try {
-              const coverageData = JSON.parse(fs.readFileSync('test_reports/coverage.json', 'utf8'));
-              const coverage = coverageData.totals.percent_covered;
-              const coverageIcon = coverage >= 80 ? '✅' : coverage >= 60 ? '⚠️' : '❌';
-              comment += `### 📊 Test Coverage\n${coverageIcon} ${coverage.toFixed(1)}%\n\n`;
-            } catch (e) {
-              comment += '### 📊 Test Coverage\n❓ Coverage data not available\n\n';
-            }
-            
-            // Read ML Test Score
-            try {
-              const mlData = JSON.parse(fs.readFileSync('test_reports/ml_test_score.json', 'utf8'));
-              const mlScore = mlData.overall_score;
-              const metaScore = mlData.metamorphic_score;
-              const scoreIcon = mlScore >= 80 ? '✅' : mlScore >= 60 ? '⚠️' : '❌';
-              comment += `### 🤖 ML Test Score\n${scoreIcon} ${mlScore.toFixed(1)}/100\n`;
-              comment += `- Metamorphic Testing: ${metaScore.toFixed(1)}%\n\n`;
-            } catch (e) {
-              comment += '### 🤖 ML Test Score\n❓ ML Test Score not available\n\n';
-            }
-            
-            // Read Pylint Score
-            try {
-              const pylintData = JSON.parse(fs.readFileSync('test_reports/pylint_score.json', 'utf8'));
-              const pylintScore = pylintData.score;
-              const pylintIcon = pylintScore >= 8 ? '✅' : pylintScore >= 6 ? '⚠️' : '❌';
-              comment += `### 🔍 Code Quality (Pylint)\n${pylintIcon} ${pylintScore.toFixed(2)}/10\n\n`;
-            } catch (e) {
-              comment += '### 🔍 Code Quality (Pylint)\n❓ Pylint score not available\n\n';
-            }
-            
-            comment += '*Automated quality check completed*';
-            
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
-
-      - name: Fail workflow if critical tests fail
-        run: |
-          python -c "
-          import json
-          import sys
-          
-          # Check if critical tests passed
-          try:
-              with open('test_reports/ml_test_score.json', 'r') as f:
-                  ml_data = json.load(f)
-              
-              # Fail if ML Test Score is too low
-              ml_score = ml_data.get('overall_score', 0)
-              if ml_score < 50:
-                  print(f'CRITICAL: ML Test Score too low: {ml_score:.1f}/100')
-                  sys.exit(1)
-              
-              # Check if too many tests failed
-              failed_tests = ml_data.get('failed_tests', 0)
-              total_tests = ml_data.get('total_tests', 1)
-              failure_rate = failed_tests / total_tests if total_tests > 0 else 0
-              
-              if failure_rate > 0.5:
-                  print(f'CRITICAL: Too many tests failed: {failed_tests}/{total_tests}')
-                  sys.exit(1)
-              
-              print('All critical quality checks passed')
-              
-          except Exception as e:
-              print(f'Warning: Could not validate critical tests: {e}')
-              # Don't fail if we can't read the results
-          "
