--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -16,10 +16,16 @@ env:
 jobs:
   quality-check:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -89,8 +95,12 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add README.md test_reports/ coverage_reports/ coverage.xml
-          git diff --staged --quiet || git commit -m "Update README and test reports with automated quality metrics [skip ci]"
-          git push origin ${{ github.ref_name }} || echo "No changes to commit"
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update README and test reports with automated quality metrics [skip ci]"
+            git push
+          fi
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
